tests/NormalTests/paczka1/fuzzy1/21783005.err
Error in line 1: WPiv5INgJ A887 50,4
Error in line 7: WPiv5INgJ A548 30,5
Error in line 13: 78FkpknLmU A548 49,6
Error in line 12: zo8ZkGdlN A383 230,8
Error in line 15: 78FkpknLmU A887 51,8
Error in line 24: 42SB5Vl3e A548 63,4
Error in line 31: 42SB5Vl3e A810 38,2
Error in line 32: y7Qe A548 15,2
Error in line 30: A810 A887 101,7
Error in line 37: A810 A383 84,5
Error in line 38: A810 A810 54,1
